# DigiLightM_firmware

./: .gitignore  CMakeLists.txt  README.md
src/: asm_macros.h  avr_helper.h  color_transform.c  color_transform.h  configuration.h  control.c  control.h  encoder.c  encoder.h  ffft32.S  fft32.h  fft_debug.c  fft_debug.h  gain_ctrl.c  gain_ctrl.h  global.h  hardware.h  in_switch.c  in_switch.h  ir_car_mp3.h  ir_led_618.h  ir_remote.c  ir_remote.h  lcd.c  lcd.h  lcd_show.c  lcd_show.h  main.c  main_effect.c  main_effect.h  menu.c  menu.h  pixel.c  pixel.h  power_control.c  power_control.h  script_str.h  sd_script.c  sd_script.h  setup.c  (+5 more)
src/BG_EFFECTS/: darkness.c  dbl_rainbow.c  lamp.c  pingpong.c  run_rainbow.c  skystar.c  template_effect.c
src/FG_EFFECTS/: classic.c  modern.c  picasso.c  plasma.c  sparkler_effect.c
src/PFFS/: mmc.c  pffconf.h  sd_card_example.c  spi.c  spi.h
